# ICS

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
.travis/: test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
.tx/: config
build-aux/m4/: bitcoin_qt.m4
build-aux/snap/: snapcraft.yaml
contrib/: gitian-build.py  install_db4.sh  iqcash-cli.bash-completion  iqcash-qt.pro  iqcash-tx.bash-completion  valgrind.supp
contrib/debian/: changelog  control  iqcash-qt.desktop  iqcash-qt.manpages  rules  watch
contrib/devtools/: README.md  check-doc.py  copyright_header.py  gen-manpages.sh  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/init/: README.md  org.iqcash.iqcashd.plist
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md
contrib/rpm/: iqcash.fc  iqcash.if  iqcash.spec  iqcash.te  pivx.spec
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  spendfrom.py
depends/: Makefile  README.md
doc/: Doxyfile.in  README.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/gitian-building/: gitian-building-mac-os-sdk.md  gitian-setup-fedora.md  gitian-setup-mac.md  (+2 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  addressbook.h  amount.cpp  amount.h  base58.cpp  blob_uint256.h  blocksignature.cpp  blocksignature.h  bloom.cpp  chain.cpp  chainparams.cpp  chainparams.h  chainparamsbase.h  clientversion.cpp  clientversion.h  coins.h  compat.h  denomination_functions.h  hash.h  init.cpp  init.h  invalid.h  invalid_outpoints.json.h  invalid_serials.json.h  iqcash-cli-res.rc  iqcash-cli.cpp  iqcash-tx-res.rc  iqcash-tx.cpp  iqcashd-res.rc  kernel.cpp  kernel.h  key.h  key_io.h  main.cpp  (+34 more)
src/qt/: CMakeLists.txt  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  iqcash.cpp  iqcash.qrc  iqcash_locale.qrc  iqcashstrings.cpp  macnotificationhandler.mm  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  paymentserver.cpp  paymentserver.h  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  transactiondesc.cpp  transactionfilterproxy.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  utilitydialog.cpp  walletmodel.cpp  walletmodel.h
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  rpcconsole.ui
src/qt/iqcash/: addnewaddressdialog.cpp  addnewcontactdialog.cpp  addnewcontactdialog.h  addresseswidget.cpp  addresseswidget.h  addressfilterproxymodel.cpp  addressfilterproxymodel.h  addressholder.cpp  addressholder.h  addresslabelrow.cpp  coldstakingmodel.cpp  coldstakingwidget.cpp  coldstakingwidget.h  contactdropdownrow.cpp  contactsdropdown.cpp  contactsdropdown.h  csrow.cpp  dashboardwidget.cpp  dashboardwidget.h  defaultdialog.cpp  defaultdialog.h  expandablebutton.cpp  focuseddialog.cpp  furabstractlistitemdelegate.cpp  furabstractlistitemdelegate.h  guitransactionsutils.cpp  guitransactionsutils.h  iqcashgui.cpp  iqcashgui.h  loadingdialog.cpp  loadingdialog.h  lockunlock.cpp  masternodeswidget.cpp  masternodeswidget.h  masternodewizarddialog.cpp  masternodewizarddialog.h  mninfodialog.cpp  mninfodialog.h  mnmodel.cpp  mnrow.cpp  (+37 more)
src/qt/iqcash/forms/: addresseswidget.ui  coldstakingwidget.ui  csrow.ui  dashboardwidget.ui  masternodeswidget.ui  masternodewizarddialog.ui  receivewidget.ui  requestdialog.ui  send.ui  sendchangeaddressdialog.ui  sendcustomfeedialog.ui  sendmultirow.ui  topbar.ui  welcomecontentwidget.ui
src/qt/iqcash/res/css/: style_dark.css  style_light.css
src/qt/iqcash/settings/: settingsbackupwallet.cpp  settingsbackupwallet.h  settingsbittoolwidget.cpp  settingsbittoolwidget.h  settingsconsolewidget.cpp  settingsconsolewidget.h  settingsdisplayoptionswidget.cpp  settingsdisplayoptionswidget.h  settingsexportcsv.cpp  settingsexportcsv.h  settingsfaqwidget.cpp  settingsfaqwidget.h  settingsinformationwidget.cpp  settingsinformationwidget.h  settingsmainoptionswidget.cpp  settingsmainoptionswidget.h  settingsmultisenddialog.cpp  settingsmultisendwidget.cpp  settingsmultisendwidget.h  settingsnetworkwidget.cpp  settingsnetworkwidget.h  settingssignmessagewidgets.cpp  settingssignmessagewidgets.h  settingswalletoptionswidget.cpp  settingswalletoptionswidget.h  settingswalletrepairwidget.cpp  settingswalletrepairwidget.h  settingswidget.cpp  settingswidget.h
src/qt/iqcash/settings/forms/: settingsbittoolwidget.ui  settingsdisplayoptionswidget.ui  settingsfaqwidget.ui  settingsmainoptionswidget.ui  settingssignmessagewidgets.ui  settingswidget.ui
src/qt/locale/: iqcash_de.ts  iqcash_en.ts  iqcash_en_US.ts  iqcash_es.ts  iqcash_es_ES.ts  iqcash_fr_FR.ts  iqcash_hr_HR.ts  iqcash_it.ts  iqcash_ko_KR.ts  iqcash_nl.ts  iqcash_pl.ts  iqcash_ru.ts  iqcash_tr.ts  iqcash_zh_CN.ts  pivx_de.ts  pivx_en.ts  pivx_en_US.ts  pivx_es.ts  pivx_es_ES.ts  pivx_fr_FR.ts  pivx_hr_HR.ts  pivx_it.ts  pivx_ko_KR.ts  pivx_nl.ts  pivx_pl.ts  pivx_ru.ts  pivx_tr.ts  pivx_zh_CN.ts
src/qt/pivx/settings/forms/: settingsfaqwidget.ui
src/qt/res/: iqcash-qt-res.rc
src/qt/res/css/: default.css
src/qt/test/: test_main.cpp  uritests.cpp
test/: README.md
util/: fetch-params.sh
(+228 files in other folders)
